@@ -1,6 +1,11 @@
 package net.jonbell.crochet.runtime;
 
+import java.lang.reflect.Method;
+import java.util.List;
 import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.function.BiConsumer;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 /**
  * User-facing facade for the stop-the-world world-safe checkpoint API.
@@ -33,6 +38,23 @@ import java.util.concurrent.atomic.AtomicBoolean;
  * call will restore I's observable instance-field state to the value it had
  * at that moment. See {@code designs/E.1/SOUNDNESS.md} for the full argument.
  *
+ * <h2>Scope limits</h2>
+ *
+ * <p>{@code checkpointWorldSafe()} does NOT cover:
+ * <ul>
+ *   <li>Live local variables inside parked (unmounted) virtual-thread continuations.
+ *       The continuation object IS heap-walked; only its call-frame locals are missed.
+ *       A {@link VirtualThreadGap} event is fired for each detected unmounted virtual
+ *       thread. Register a consumer via {@link #setCheckpointEventConsumer} to handle
+ *       these events programmatically.
+ *   <li>Java object fields written via raw C pointers by JNI code that does not go
+ *       through the JVM's safepoint fence. This is a pre-existing Crochet limitation
+ *       (paper §5.3) and is not specific to {@code checkpointWorldSafe()}.
+ * </ul>
+ *
+ * <p>See {@code crochet-agent/docs/checkpoint-world-scope.md} for the full
+ * scope-limit reference, including reproducible examples for each limit.
+ *
  * <h2>Fallback</h2>
  *
  * <p>When the native agent is not loaded ({@link HeapWalker#isEngaged()} is
@@ -46,6 +68,13 @@ import java.util.concurrent.atomic.AtomicBoolean;
  * {@code designs/E.1/SOUNDNESS.md §8} for the rationale behind the fallback
  * decision.
  *
+ * <h2>Structured events</h2>
+ *
+ * <p>Register a {@link BiConsumer}{@code <CheckpointEvent, Object>} via
+ * {@link #setCheckpointEventConsumer(BiConsumer)} to receive structured events
+ * before any snapshot state is altered. The context argument ({@code Object}) is
+ * reserved for future use and is currently always {@code null}.
+ *
  * <h2>Merge note</h2>
  *
  * <p>This class is a temporary staging location. When unit A.3 lands and
@@ -56,8 +85,13 @@ import java.util.concurrent.atomic.AtomicBoolean;
  * @see HeapWalker
  * @see CheckpointRollbackAgent#checkpointAll()
  * @see CheckpointRollbackAgent#rollbackAll(int)
+ * @see VirtualThreadGap
+ * @see CheckpointEvent
  * @see <a href="../../../../../../../../designs/E.2/DESIGN.md">E.2 Design</a>
  * @see <a href="../../../../../../../../designs/E.1/SOUNDNESS.md">E.1 Soundness Sketch</a>
+ * @see <a href="../../../../../../../../designs/E.4/DESIGN.md">E.4 Design</a>
+ * @see <a href="../../../../../../../../crochet-agent/docs/checkpoint-world-scope.md">
+ *      Scope-limit reference</a>
  */
 public final class CrochetWorldSafe {
 
@@ -71,10 +105,66 @@ public final class CrochetWorldSafe {
     private static final AtomicBoolean FALLBACK_WARNED = new AtomicBoolean(false);
 
     /**
+     * Guards the one-time virtual-thread-gap warning emitted to stderr when no
+     * event consumer is registered. Fires at most once per JVM lifetime.
+     */
+    private static final AtomicBoolean LOOM_GAP_WARNED = new AtomicBoolean(false);
+
+    /**
+     * Optional structured-event consumer. When non-null, called for each
+     * {@link CheckpointEvent} before any snapshot state is altered. When null,
+     * gaps are reported via a one-time stderr warning. Volatile so that a
+     * consumer registered from one thread is visible to the checkpoint thread.
+     *
+     * @see #setCheckpointEventConsumer(BiConsumer)
+     */
+    private static volatile BiConsumer<CheckpointEvent, Object> eventConsumer;
+
+    /**
+     * Registers a consumer that receives structured {@link CheckpointEvent}s
+     * emitted by {@link #checkpointWorldSafe()}.
+     *
+     * <p>The consumer is called on the thread invoking {@code checkpointWorldSafe()},
+     * before any snapshot state is altered. The context argument ({@code Object})
+     * is reserved for future use and is currently always {@code null}.
+     *
+     * <p>Setting {@code null} removes the consumer (subsequent gaps fall back to
+     * the one-time stderr warning). Only one consumer can be registered at a time;
+     * calling this method replaces any prior registration.
+     *
+     * <p><b>Thread safety:</b> the assignment is volatile; a consumer registered
+     * before any call to {@code checkpointWorldSafe()} is guaranteed to be visible
+     * to that call.
+     *
+     * <p><b>Reentrancy:</b> the consumer must not itself call
+     * {@code checkpointWorldSafe()} (would deadlock on the native STW mutex if
+     * the JVMTI agent is loaded).
+     *
+     * @param consumer the event consumer, or {@code null} to deregister
+     */
+    public static void setCheckpointEventConsumer(
+            BiConsumer<CheckpointEvent, Object> consumer) {
+        eventConsumer = consumer;
+    }
+
+    /**
+     * Returns the currently registered event consumer, or {@code null} if none
+     * is registered.
+     */
+    public static BiConsumer<CheckpointEvent, Object> getCheckpointEventConsumer() {
+        return eventConsumer;
+    }
+
+    /**
      * Establishes a whole-program checkpoint at a fresh version V and returns V.
      *
-     * <p>The implementation proceeds in three phases:
+     * <p>The implementation proceeds in this order:
      * <ol>
+     *   <li><b>Virtual-thread gap detection:</b> scans the live thread set for
+     *       unmounted virtual threads. For each found, fires a {@link VirtualThreadGap}
+     *       event via the registered consumer (or logs to stderr once). This phase
+     *       runs BEFORE any state is altered so that callers can observe the gap and
+     *       abort if needed (by throwing from their consumer).
      *   <li><b>Static-field pass:</b> equivalent to
      *       {@link CheckpointRollbackAgent#checkpointAll()}'s class-level walk —
      *       checkpoints the static fields of every known user class.
@@ -87,7 +177,7 @@ public final class CrochetWorldSafe {
      *       a no-op when {@link StackRoots#isEngaged()} is false.
      * </ol>
      *
-     * <p>When the native agent is loaded, phase 2 subsumes the stack-root pass
+     * <p>When the native agent is loaded, phase 3 subsumes the stack-root pass
      * (all stack-referenced instances are heap-reachable) and the thread-object
      * + system-classloader passes in {@code checkpointAll}. The stack pass is
      * still performed as a defensive belt-and-suspenders measure.
@@ -99,6 +189,11 @@ public final class CrochetWorldSafe {
      * @return the checkpoint version V; pass to {@link CheckpointRollbackAgent#rollbackAll(int)}
      */
     public static int checkpointWorldSafe() {
+        // Phase 0: virtual-thread gap detection.
+        // Done FIRST, before any state is altered, so the consumer can observe
+        // or abort cleanly. See designs/E.4/DESIGN.md §2 for the rationale.
+        detectAndReportVirtualThreadGaps();
+
         // Phase 1: static-field pass (mirrors checkpointAll's class-level walk).
         // Done BEFORE STW to keep the STW window as short as possible.
         // Ordering: see SOUNDNESS.md §4 (interaction with checkpointAll) and
@@ -137,5 +232,163 @@ public final class CrochetWorldSafe {
         // internally. No double-work needed here.
 
         return v;
+    }
+
+    /**
+     * Cached reference to {@code jdk.internal.vm.ThreadContainer.threads()}, obtained
+     * once on first use. {@code null} means the reflection probe failed (the JVM does not
+     * have this API, or the necessary {@code --add-opens} flag was not supplied).
+     */
+    private static volatile Method THREAD_CONTAINER_THREADS_METHOD;
+
+    /**
+     * Cached reference to {@code jdk.internal.vm.ThreadContainers.root()}.
+     */
+    private static volatile Method THREAD_CONTAINERS_ROOT_METHOD;
+
+    /**
+     * Cached reference to {@code jdk.internal.vm.ThreadContainer.children()}.
+     */
+    private static volatile Method THREAD_CONTAINER_CHILDREN_METHOD;
+
+    /**
+     * {@code true} if the JVM-internal reflection probe has been attempted at
+     * least once. Guards repeated probe attempts (probe once; cache the result).
+     */
+    private static volatile boolean VT_PROBE_DONE;
+
+    /**
+     * Scans the live thread set for unmounted virtual threads and fires a
+     * {@link VirtualThreadGap} event for each one.
+     *
+     * <p>A virtual thread is considered "unmounted" if its state is not
+     * {@link Thread.State#RUNNABLE}: a RUNNABLE virtual thread is executing on a
+     * carrier thread which will be suspended by {@code SuspendThreadList}, so its
+     * call-frame locals ARE covered. Non-RUNNABLE virtual threads are parked
+     * off-carrier; their continuation frames are not reached by the STW.
+     *
+     * <p>Detection mechanism: uses {@code jdk.internal.vm.ThreadContainers.root()}
+     * (with {@code --add-exports java.base/jdk.internal.vm=ALL-UNNAMED} and
+     * {@code --add-opens java.base/jdk.internal.vm=ALL-UNNAMED}) to walk all live
+     * threads including virtual threads. Falls back to a warning if the internal
+     * API is not accessible (e.g., missing {@code --add-opens} flag).
+     *
+     * <p>Note: a pinned RUNNABLE virtual thread (carrier blocked in native code)
+     * is classified as "covered" by this heuristic because its carrier IS suspended.
+     * This is conservative-safe.
+     *
+     * <p>Events are fired by calling the registered consumer (see
+     * {@link #setCheckpointEventConsumer(BiConsumer)}), or by emitting a one-time
+     * stderr warning if no consumer is registered.
+     */
+    private static void detectAndReportVirtualThreadGaps() {
+        BiConsumer<CheckpointEvent, Object> consumer = eventConsumer; // single volatile read
+
+        // Probe the JVM-internal API on first call.
+        if (!VT_PROBE_DONE) {
+            probeVirtualThreadApi();
+        }
+
+        if (THREAD_CONTAINERS_ROOT_METHOD == null) {
+            // Internal API not accessible. Detection gap applies: we cannot enumerate
+            // virtual threads. This should be treated as a configuration issue:
+            // add --add-exports java.base/jdk.internal.vm=ALL-UNNAMED
+            //     --add-opens  java.base/jdk.internal.vm=ALL-UNNAMED
+            // to the JVM flags to enable detection.
+            // We do not emit a warning here by default — this is a detection gap
+            // (not a known gap), and excessive warnings would be noisy.
+            return;
+        }
+
+        try {
+            Object root = THREAD_CONTAINERS_ROOT_METHOD.invoke(null);
+            collectAndFireVTGaps(root, consumer);
+        } catch (RuntimeException | Error e) {
+            throw e;
+        } catch (Throwable t) {
+            throw new RuntimeException("[crochet-heap] event consumer threw checked exception", t);
+        }
+    }
+
+    /**
+     * Probes the {@code jdk.internal.vm.ThreadContainers} internal API and caches
+     * the reflected methods. Called at most once per JVM lifetime.
+     */
+    private static synchronized void probeVirtualThreadApi() {
+        if (VT_PROBE_DONE) {
+            return; // another thread beat us to the probe
+        }
+        try {
+            Class<?> tcClass = Class.forName("jdk.internal.vm.ThreadContainers");
+            Class<?> containerClass = Class.forName("jdk.internal.vm.ThreadContainer");
+
+            Method rootM = tcClass.getDeclaredMethod("root");
+            rootM.setAccessible(true);
+
+            Method threadsM = containerClass.getDeclaredMethod("threads");
+            threadsM.setAccessible(true);
+
+            Method childrenM = containerClass.getDeclaredMethod("children");
+            childrenM.setAccessible(true);
+
+            THREAD_CONTAINERS_ROOT_METHOD = rootM;
+            THREAD_CONTAINER_THREADS_METHOD = threadsM;
+            THREAD_CONTAINER_CHILDREN_METHOD = childrenM;
+        } catch (Throwable e) {
+            // API not accessible (missing --add-opens, or different JDK version).
+            // Detection will be skipped; THREAD_CONTAINERS_ROOT_METHOD stays null.
+            THREAD_CONTAINERS_ROOT_METHOD = null;
+        } finally {
+            VT_PROBE_DONE = true;
+        }
+    }
+
+    /**
+     * Recursively walks the {@code ThreadContainer} tree rooted at {@code container},
+     * collecting virtual threads and firing gap events for unmounted ones.
+     */
+    @SuppressWarnings("unchecked")
+    private static void collectAndFireVTGaps(Object container,
+                                             BiConsumer<CheckpointEvent, Object> consumer)
+            throws Throwable {
+        // Collect threads in this container.
+        List<Thread> threads = ((Stream<Thread>) THREAD_CONTAINER_THREADS_METHOD.invoke(container))
+                .collect(Collectors.toList());
+
+        for (Thread t : threads) {
+            if (!t.isVirtual()) {
+                continue;
+            }
+            Thread.State state = t.getState();
+            // RUNNABLE virtual threads are mounted on a carrier; their carrier IS
+            // suspended by SuspendThreadList. Only non-RUNNABLE VTs have uncovered frames.
+            if (state == Thread.State.RUNNABLE) {
+                continue;
+            }
+            // Found an unmounted virtual thread — fire the gap event.
+            VirtualThreadGap event = VirtualThreadGap.of(t);
+            if (consumer != null) {
+                consumer.accept(event, null);
+            } else {
+                if (LOOM_GAP_WARNED.compareAndSet(false, true)) {
+                    System.err.println("[crochet-heap] WARNING: virtual thread \""
+                            + event.threadName() + "\" (state=" + event.threadState()
+                            + ") is unmounted; its continuation frame locals are NOT"
+                            + " captured by checkpointWorldSafe(). The continuation"
+                            + " object's heap fields ARE captured. See"
+                            + " crochet-agent/docs/checkpoint-world-scope.md §1 for"
+                            + " details and workarounds."
+                            + " (This warning will not repeat for subsequent"
+                            + " virtual thread gaps in this JVM.)");
+                }
+            }
+        }
+
+        // Recurse into child containers.
+        List<?> children = ((Stream<?>) THREAD_CONTAINER_CHILDREN_METHOD.invoke(container))
+                .collect(Collectors.toList());
+        for (Object child : children) {
+            collectAndFireVTGaps(child, consumer);
+        }
     }
 }
